--- a/src/contact.html
+++ b/src/contact.html
@@ -75,7 +75,7 @@
             </span>
             <form action="#" class="contact__form form">
               <input type="text" class="form__input form__el" name="Имя" placeholder="Ваше имя">
-              <input type="tel" class="form__input form__el" name="Номер телефона">
+              <input type="tel" class="form__input form__el" name="Номер телефона" placeholder="+7 (977) 777-77-77">
               <textarea name="" class="form__input form__el form__textarea" placeholder="Ваш комментарий"></textarea>
               <button class="form__btn btn-reset btn-link">Отправить</button>
               <span class="form__info">
