--- a/src/parts/catalog.html
+++ b/src/parts/catalog.html
@@ -19,7 +19,7 @@
             <li class="catalog__item-link"><a href="#"> Для Интерьера </a></li>
             <li class="catalog__item-link"><a href="#"> Композиции </a></li>
           </ul>
-          <a href="" class="link-watch">Смотреть каталог</a>
+          <a href="./catalog.html" class="link-watch">Смотреть каталог</a>
         </div>
         <div class="catalog__item catalog__item--two">
           <h4 class="catalog__item-subtitle">Цветы</h4>
@@ -33,7 +33,7 @@
             <li class="catalog__item-link"><a href="#"> Розы </a></li>
             <li class="catalog__item-link"><a href="#"> Свадебные </a></li>
           </ul>
-          <a href="" class="link-watch">Смотреть каталог</a>
+          <a href="./catalog.html" class="link-watch">Смотреть каталог</a>
         </div>
         <div class="catalog__item catalog__item--three">
           <h4 class="catalog__item-subtitle">Допонительно</h4>
@@ -44,7 +44,7 @@
             <li class="catalog__item-link"><a href="#"> Открытки </a></li>
             <li class="catalog__item-link"><a href="#"> Упаковка </a></li>
           </ul>
-          <a href="" class="link-watch">Смотреть каталог</a>
+          <a href="./catalog.html" class="link-watch">Смотреть каталог</a>
         </div>
       </div>
     </div>
