--- a/src/parts/header-page.html
+++ b/src/parts/header-page.html
@@ -7,48 +7,33 @@
       <nav class="nav" title="Навигация по сайту">
         <ul class="list-reset nav__list">
           <li class="nav__item nav__item--dropdown">
-            <a href="#" class="nav__link">
+            <a href="./catalog.html" class="nav__link">
             Каталог
           </a>
           <ul class="dropdown-menu list-reset">
             <li class="dropdown-menu__item">
-              <a href="#" class="dropdown-menu__link  nav__link" style="filter: blur(0px);">
-                Популярное
+              <a href="./error-404.html" class="dropdown-menu__link  nav__link" style="filter: blur(0px);">
+                Ошибка 404
             </a>
             </li>
             <li class="dropdown-menu__item">
-              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
-                Сборны букеты
-            </a>
-            </li>
-            <li class="dropdown-menu__item">
-              <a href="item-#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
-                монобукеты
+              <a href="./corporate.html" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
+                Корпоративным клиентам
             </a>
             </li>
             <li class="dropdown-menu__item dropdown-menu__item--hidden">
-              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
-                Композиции из&nbsp;цветов к&nbsp;коробке
+              <a href="./payment-error.html" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
+                Оплата не прошла
             </a>
             </li>
             <li class="dropdown-menu__item dropdown-menu__item--hidden">
-              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
-                интерьерные композиции
+              <a href="./placing.html" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
+                Оформление заказа
             </a>
             </li>
             <li class="dropdown-menu__item dropdown-menu__item--hidden">
-              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
-                индивидуальный букет
-            </a>
-            </li>
-            <li class="dropdown-menu__item dropdown-menu__item--hidden">
-              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
-                сухоцветы
-            </a>
-            </li>
-            <li class="dropdown-menu__item dropdown-menu__item--hidden">
-              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
-                дополнительно
+              <a href="./successfully.html" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
+                Оплата прошла успешно
             </a>
             </li>
           </ul></li>
