--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -11,43 +11,28 @@
           </a>
           <ul class="dropdown-menu list-reset">
             <li class="dropdown-menu__item">
-              <a href="#" class="dropdown-menu__link  nav__link" style="filter: blur(0px);">
-                Популярное
+              <a href="./error-404.html" class="dropdown-menu__link  nav__link" style="filter: blur(0px);">
+                Ошибка 404
             </a>
             </li>
             <li class="dropdown-menu__item">
-              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
-                Сборны букеты
-            </a>
-            </li>
-            <li class="dropdown-menu__item">
-              <a href="item-#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
-                монобукеты
+              <a href="./corporate.html" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
+                Корпоративным клиентам
             </a>
             </li>
             <li class="dropdown-menu__item dropdown-menu__item--hidden">
-              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
-                Композиции из цветов к коробке
+              <a href="./payment-error.html" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
+                Оплата не прошла
             </a>
             </li>
             <li class="dropdown-menu__item dropdown-menu__item--hidden">
-              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
-                интерьерные композиции
+              <a href="./placing.html" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
+                Оформление заказа
             </a>
             </li>
             <li class="dropdown-menu__item dropdown-menu__item--hidden">
-              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
-                индивидуальный букет
-            </a>
-            </li>
-            <li class="dropdown-menu__item dropdown-menu__item--hidden">
-              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
-                сухоцветы
-            </a>
-            </li>
-            <li class="dropdown-menu__item dropdown-menu__item--hidden">
-              <a href="#" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
-                дополнительно
+              <a href="./successfully.html" class="dropdown-menu__link nav__link" style="filter: blur(0px);">
+                Оплата прошла успешно
             </a>
             </li>
           </ul>
