--- a/src/parts/hero.html
+++ b/src/parts/hero.html
@@ -9,7 +9,7 @@
             <span class="hero__content-text">
               Создаём для тех, кто ценит свежесть и изящество цветка
             </span>
-            <a href="#" class="hero__content-link btn-link">
+            <a href="./catalog.html" class="hero__content-link btn-link">
               Смотреть каталог
             </a>
           </div>
