--- a/src/parts/popular-flow.html
+++ b/src/parts/popular-flow.html
@@ -14,11 +14,11 @@
             <span class="product__position-offers product__position-offers--new">new</span>
             <!-- <span class="product__position-offers product__position-offers--sale">sale</span> -->
           </div>
-          <a href="#" class="product__link-img">
+          <a href="./card.html" class="product__link-img">
             <img src="../img/pop-img-1.jpg" alt="Картинка букета" class="product__img">
           </a>
           <h3 class="product__title">
-            <a href="#">
+            <a href="./card.html">
               лучший день
             </a>
           </h3>
@@ -35,11 +35,11 @@
           </button>
         </article>
         <article class="product">
-          <a href="#" class="product__link-img">
+          <a href="./card.html" class="product__link-img">
             <img src="../img/pop-img-2.jpg" alt="Картинка букета" class="product__img">
           </a>
           <h3 class="product__title">
-            <a href="#">
+            <a href="./card.html">
               лучший день
             </a>
           </h3>
@@ -58,11 +58,11 @@
           <div class="product__position">
             <span class="product__position-offers product__position-offers--sale">sale</span>
           </div>
-          <a href="#" class="product__link-img">
+          <a href="./card.html" class="product__link-img">
             <img src="../img/pop-img-3.jpg" alt="Картинка букета" class="product__img">
           </a>
           <h3 class="product__title">
-            <a href="#">
+            <a href="./card.html">
               лучший день
             </a>
           </h3>
@@ -79,7 +79,7 @@
           </button>
         </article>
       </div>
-      <a href="#" class="link-watch popular__link-watch">
+      <a href="./catalog.html" class="link-watch popular__link-watch">
         смотреть весь каталог
         <svg class="">
           <use xlink:href="img/sprite.svg#link-arrow"></use>
