--- a/src/parts/reason.html
+++ b/src/parts/reason.html
@@ -30,7 +30,7 @@
             оплатить можно при получении или онлайн на сайте
           </li>
         </ul>
-        <a href="№" class="reason__link btn-link">Собрать индивидуальный букет</a>
+        <a href="./catalog.html" class="reason__link btn-link">Собрать индивидуальный букет</a>
       </div>
       <div class="reason__right">
         <div class="reason__images">
