--- a/src/payment-error.html
+++ b/src/payment-error.html
@@ -29,9 +29,9 @@
               Попробуйте оплатить еще раз!
             </span>
             <div class="payment-error__links">
-              <button class="payment-error__btn btn-reset">
+              <a href="./placing.html" class="payment-error__btn btn-reset">
                 оплатить еще раз
-              </button>
+              </a>
               <a href="./index.html" class="payment-error__link-home">Вернуться на главную</a>
             </div>
           </div>
