--- a/src/parts/header-page.html
+++ b/src/parts/header-page.html
@@ -1,4 +1,4 @@
-<header class="header header-page">
+<header class="header header-page fixed-block">
   <div class="container">
     <div class="header__inner">
       <a href="./index.html" class="logo">
