--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -1,4 +1,4 @@
-<header class="header" id="header">
+<header class="header fixed-block" id="header">
   <div class="container">
     <div class="header__inner">
       <a href="./index.html" class="logo">
