--- a/src/parts/hero.html
+++ b/src/parts/hero.html
@@ -36,7 +36,7 @@
           </div>
           <div class="better-call">
             <a href="tel:375291136969" class="better-call__tel">+375 (29) 113-69-69</a>
-            <button class="btn-reset better-call__btn">Заказать звонок</button>
+            <button class="btn-reset better-call__btn" data-graph-path="modal-tell">Заказать звонок</button>
           </div>
           <div class="bag">
             <span class="bag__num">5</span>
