Сделал добавление и удаление товаров в корзину

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -112,15 +112,7 @@
                 <a href="tel:375291136969" class="better-call__tel">+375 (29) 113-69-69</a>
                 <button class="btn-reset better-call__btn" data-graph-path="modal-tell">Заказать звонок</button>
               </div>
-
-              <div class="bag">
-                <span class="bag__num">5</span>
-                <button class="btn-reset bag__btn">
-                  <svg class="">
-                    <use xlink:href="img/sprite.svg#bag"></use>
-                  </svg>
-                </button>
-              </div>
+              @include('parts/bag.html')
             </aside>
           </div>
           <div class="catalog-content" data-header="header">
@@ -311,7 +303,7 @@
                   </h3>
                   <div class="product__price product-price">
                     <span class="product-price__current">
-                      167.000 ₽
+                      1 765.000 ₽
                     </span>
                     <span class="product-price__old">
 
@@ -337,7 +329,7 @@
                   </h3>
                   <div class="product__price product-price">
                     <span class="product-price__current">
-                      167.000 ₽
+                      1 250
                     </span>
                     <span class="product-price__old">
 
@@ -361,10 +353,10 @@
                   </h3>
                   <div class="product__price product-price">
                     <span class="product-price__current">
-                      167.000 ₽
+                      2 100
                     </span>
                     <span class="product-price__old">
-                      187.000 ₽
+                      1 800 ₽
                     </span>
                   </div>
                   <button class="product__btn btn-reset btn-bag">
@@ -386,7 +378,7 @@
                   </h3>
                   <div class="product__price product-price">
                     <span class="product-price__current">
-                      167.000 ₽
+                      1 760
                     </span>
                     <span class="product-price__old">
 
@@ -410,7 +402,7 @@
                   </h3>
                   <div class="product__price product-price">
                     <span class="product-price__current">
-                      167.000 ₽
+                      1 670
                     </span>
                     <span class="product-price__old">
 
@@ -436,7 +428,7 @@
                   </h3>
                   <div class="product__price product-price">
                     <span class="product-price__current">
-                      167.000 ₽
+                      2 300
                     </span>
                     <span class="product-price__old">
                       257.000 ₽
@@ -462,10 +454,10 @@
                   </h3>
                   <div class="product__price product-price">
                     <span class="product-price__current">
-                      167.000 ₽
+                      3 150
                     </span>
                     <span class="product-price__old">
-                      257.000 ₽
+                       4 257.000 ₽
                     </span>
                   </div>
                   <button class="product__btn btn-reset btn-bag">
@@ -487,10 +479,10 @@
                   </h3>
                   <div class="product__price product-price">
                     <span class="product-price__current">
-                      167.000 ₽
+                      900
                     </span>
                     <span class="product-price__old">
-                      257.000 ₽
+                      1 257.000 ₽
                     </span>
                   </div>
                   <button class="product__btn btn-reset btn-bag">
@@ -513,10 +505,10 @@
                   </h3>
                   <div class="product__price product-price">
                     <span class="product-price__current">
-                      167.000 ₽
+                      2 167
                     </span>
                     <span class="product-price__old">
-                      257.000 ₽
+                      3 257.000 ₽
                     </span>
                   </div>
                   <button class="product__btn btn-reset btn-bag">
@@ -539,10 +531,10 @@
                   </h3>
                   <div class="product__price product-price">
                     <span class="product-price__current">
-                      167.000 ₽
+                      1 220
                     </span>
                     <span class="product-price__old">
-                      257.000 ₽
+                      2 257.000 ₽
                     </span>
                   </div>
                   <button class="product__btn btn-reset btn-bag">
@@ -565,7 +557,7 @@
                   </h3>
                   <div class="product__price product-price">
                     <span class="product-price__current">
-                      167.000 ₽
+                      1 167
                     </span>
                     <span class="product-price__old">
                     </span>
@@ -590,10 +582,10 @@
                   </h3>
                   <div class="product__price product-price">
                     <span class="product-price__current">
-                      167.000 ₽
+                      2 677
                     </span>
                     <span class="product-price__old">
-                      257.000 ₽
+                       3 257.000 ₽
                     </span>
                   </div>
                   <button class="product__btn btn-reset btn-bag">
