--- a/src/parts/card-bag.html
+++ b/src/parts/card-bag.html
@@ -13,7 +13,7 @@
     </div>
       <div class="card-bag__content">
         <ul class="card-bag__items card-list list-reset">
-          <li class="card-list__item">
+          <!-- <li class="card-list__item">
             <article class="bag-card">
               <div class="bag-card__img">
                 <img src="../img/card-slider-1.jpg" alt="Букет" class="bag-card__image">
@@ -39,35 +39,19 @@
                 </div>
               </div>
             </article>
-          </li>
-          <li class="card-list__item">
-            <article class="bag-card">
-              <div class="bag-card__img">
-                <img src="../img/card-slider-1.jpg" alt="Букет" class="bag-card__image">
-              </div>
-              <div class="bag-card__info">
-                <div class="bag-card__info-top">
-                  <h3 class="bag-card__info-title">
-                    рубиновые искры
-                  </h3>
-                  <span class="bag-card__info-price">
-                    167.00 ₽
-                  </span>
-                </div>
-                <div class="bag-card__info-botton">
-                  <div class="bag-card__stepper stepper">
-                    <button class="btn-reset stepper__btn stepper__btn--disable stepper__btn--minus" aria-label="Уменьшить количетсво">-</button>
-                    <input type="text" class="stepper__input input-reset" value="1" maxlength="3">
-                    <button class="btn-reset stepper__btn stepper__btn--plus" aria-label="Увеличить количетсво">+</button>
-                  </div>
-                  <button class="btn-reset bag-card__btn-delete">
-                    Удалить
-                  </button>
-                </div>
-              </div>
-            </article>
-          </li>
+          </li> -->
         </ul>
+      </div>
+      <div class="card-bag__bottom">
+        <div class="card-bag__descr">
+          Предварительный итог <span class="card-bag__fullprice">0</span>
+        </div>
+        <p class="card-bag__text">
+          Чтобы узнать стоимость доставки, перейдите к оформлению заказа.
+        </p>
+        <button class="card-bag__btn btn-reset btn-bag">
+          Оформить заказ
+        </button>
       </div>
   </div>
 </div>
