--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -83,14 +83,8 @@
           <div class="better-call">
             <a href="tel:375291136969" class="better-call__tel">+375 (29) 113-69-69</a>
           </div>
-          <div class="bag">
-            <span class="bag__num">5</span>
-            <button class="btn-reset bag__btn">
-              <svg class="">
-                <use xlink:href="img/sprite.svg#bag"></use>
-              </svg>
-            </button>
-          </div>
+            @include('./bag.html')
+
         </div>
       </div>
     </div>
